deploy: 71fa2706aa719b33900027b83a3b8dcd7a712b49

--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
 </ul>
 
   </div>
+</div><div id="newegg" class="box columns">
+  <div class="column">
+    <h3 class="title">
+      <a href="#newegg">
+        Newegg
+      </a>
+    </h3>
+    <p class="is-size-7 is-italic mt-2">
+      Added August 25, 2021
+    </p>
+  </div>
+  <div class="column is-two-thirds content">
+    <p>Previously (circa 2018-2019) I had issues with counterfeit products coming from Newegg. With Newegg being involved in the recent <a href="#gigabyte">Gigabyte exploding PSU scandal</a> by dumping seemingly old or RMA stock on unsuspecting customers, I'm hesistant to purchase anything from them for a while.</p>
+
+  </div>
 </div>
       </main>
     </div>
