deploy: 80b0b2b65baacc5122ac6850051807bfdcdb4180

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="subtitle">Companies, things, or people on my shit list; the list of things I don't like.</p>
       </header>
       <main>
-        <div id="gigabyte" class="box columns">
+        <div id="gigabyte" class="box columns mb-5">
   <div class="column">
     <h3 class="title">
       <a href="#gigabyte">
@@ -33,7 +33,7 @@
 </ul>
 
   </div>
-</div><div id="newegg" class="box columns">
+</div><div id="newegg" class="box columns mb-5">
   <div class="column">
     <h3 class="title">
       <a href="#newegg">
