deploy: 9401d1b52134c793d76b15e0857270fe3adc53d4

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <li>Metrics explorer has terrible UX coming from a Prometheus background.</li>
 <li>Log search is extremely frustrating because full text search only works on the message field and not other fields in a structured log message.</li>
 <li>Monitor management UX is also bad. (why is the query some custom query language that's different from the metrics explorer?)</li>
+<li>I personally have had a not-great experience with their support. Friendly, but not super helpful.</li>
 </ul>
 
   </div>
